--- a/package.json
+++ b/package.json
@@ -9,23 +9,32 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
-    "next": "15.1.5",
-    "fumadocs-ui": "14.7.5",
+    "@radix-ui/react-slot": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fumadocs-core": "14.7.5",
+    "fumadocs-mdx": "11.3.1",
+    "fumadocs-ui": "14.7.5",
+    "lucide-react": "^0.473.0",
+    "mameen-ui": "file:",
+    "motion": "^12.0.5",
+    "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "fumadocs-mdx": "11.3.1"
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.13",
     "@types/node": "22.10.7",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
-    "typescript": "^5.7.3",
-    "@types/mdx": "^2.0.13",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8",
+    "eslint-config-next": "15.1.5",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "eslint": "^8",
-    "eslint-config-next": "15.1.5"
+    "typescript": "^5.7.3"
   }
 }
